--- a/frontend/src/6_shared/ui/Textarea/Textarea.module.css
+++ b/frontend/src/6_shared/ui/Textarea/Textarea.module.css
@@ -1,4 +1,4 @@
-  .input {
+  .textarea {
     background: none;
     color: rgba(0, 0, 0, 0.7);
     font-size: 18px;
@@ -8,16 +8,17 @@
     border: none;
     border-radius: 0;
     border-bottom: 1px solid #c6c6c6;
+    width: 100%;
   }
-  .input:focus{
+  .textarea:focus{
     outline: none;
   }
-  .input:focus ~ .label, .input:valid ~ .label {
+  .textarea:focus ~ .label, .textarea:valid ~ .label {
     top: -14px;
     font-size: 12px;
     color: #2196F3;
   }
-  .input:focus ~ .bar:before {
+  .textarea:focus ~ .bar:before {
     width: 100%;
   }
 
