--- a/frontend/src/4_features/ProductImages/ProductImages.module.css
+++ b/frontend/src/4_features/ProductImages/ProductImages.module.css
@@ -17,7 +17,7 @@
     overflow: hidden;
     flex-wrap: wrap;
     height: 100px;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
 }
 
